--- a/app/src/main/res/layout/study_order_item.xml
+++ b/app/src/main/res/layout/study_order_item.xml
@@ -107,22 +107,22 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/order_receive"
+                android:id="@+id/order_start"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/comm_select_orange"
                 android:padding="@dimen/layout_margin_l"
-                android:text="接单"
+                android:text="开始练车"
                 android:textColor="@color/white" />
 
 
             <TextView
-                android:id="@+id/order_distribution"
+                android:id="@+id/order_finish"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/comm_select_orange"
                 android:padding="@dimen/layout_margin_l"
-                android:text="分配"
+                android:text="完成练车"
                 android:textColor="@color/comm_white" />
         </LinearLayout>
     </RelativeLayout>
